# aisearch

./: .gitignore  CMakeLists.txt  README.md
SmartTodo/: README.md  main.py  smart_todo.py  tasks.json
antonina_move_solution/: Antonina_Keldyshevna_journey.cpp  antlog.txt
src/: main.cpp
